Add template and guide; start reorganizing specific .confs to follow template format

--- a/template.conf
+++ b/template.conf
@@ -3,8 +3,10 @@
 # Networking #
 ##############
 
-# PrivateNetwork= service needs access to system network
-RestrictAddressFamilies=AF_UNIX AF_BLUETOOTH
+PrivateNetwork=yes
+RestrictAddressFamilies=AF_UNIX
+IPAccounting=yes
+# IPAddressAllow= service does not require access to any IP addresses
 IPAddressDeny=any
 
 ###############
@@ -15,9 +17,9 @@ IPAddressDeny=any
 #  these settings with either CapabilityBoundingSet=~CAP_SYS_ADMIN or
 #  SystemCallFilter=~@mount.
 
-# ProtectHome=yes already specified in packaged unit file
+ProtectHome=yes
 ProtectSystem=strict
-ReadWritePaths=-/var/lib/bluetooth
+ReadWritePaths=-/example/path
 PrivateTmp=yes
 
 ###################
@@ -31,8 +33,8 @@ PrivateTmp=yes
 # Devices #
 ###########
 
-# PrivateDevices= service needs access to hardware devices
-# DeviceAllow=
+PrivateDevices=yes
+DeviceAllow=/dev/exampledevice
 
 ##########
 # Kernel #
@@ -46,7 +48,7 @@ ProtectKernelLogs=yes
 # Misc #
 ########
 
-# CapabilityBoundingSet= already specified in packaged unit file
+CapabilityBoundingSet=
 # AmbientCapabilities= service runs as root
 NoNewPrivileges=yes
 ProtectHostname=yes
