Reorganize all .conf files

--- a/fail2ban.service.d/hardening.conf
+++ b/fail2ban.service.d/hardening.conf
@@ -1,27 +1,69 @@
 [Service]
-IPAccounting=yes
-NoNewPrivileges=yes
-CapabilityBoundingSet=CAP_AUDIT_READ CAP_DAC_READ_SEARCH CAP_NET_ADMIN CAP_NET_RAW
+##############
+# Networking #
+##############
+
+# PrivateNetwork= service needs access to system network
 RestrictAddressFamilies=AF_UNIX AF_INET AF_INET6
+IPAccounting=yes
 IPAddressDeny=any
 IPAddressAllow=localhost
+
+###############
+# File system #
+###############
+#  Note that the effect of these settings may be undone by privileged processes. In order to
+#  set up an effective sandboxed environment for a unit it is thus recommended to combine
+#  these settings with either CapabilityBoundingSet=~CAP_SYS_ADMIN or
+#  SystemCallFilter=~@mount.
+
+ProtectHome=yes
 ProtectSystem=full
 ReadWritePaths=-/etc/ufw/user.rules
-ProtectHome=yes
 PrivateTmp=yes
+
+###################
+# User separation #
+###################
+
+# PrivateUsers= service runs as root
+# DynamicUser= service runs as root
+
+###########
+# Devices #
+###########
+
 PrivateDevices=yes
-ProtectHostname=yes
-ProtectClock=yes
+# DeviceAllow= service has PrivateDevices=yes
+
+##########
+# Kernel #
+##########
 ProtectKernelTunables=yes
 ProtectKernelModules=yes
 ProtectKernelLogs=yes
+
+########
+# Misc #
+########
+
+CapabilityBoundingSet=CAP_AUDIT_READ CAP_DAC_READ_SEARCH CAP_NET_ADMIN CAP_NET_RAW
+# AmbientCapabilities= service runs as root
+NoNewPrivileges=yes
+ProtectHostname=yes
+ProtectClock=yes
 ProtectControlGroups=yes
 RestrictNamespaces=yes
 LockPersonality=yes
 MemoryDenyWriteExecute=yes
 RestrictRealtime=yes
 RestrictSUIDSGID=yes
-RemoveIPC=yes
+# RemoveIPC= service runs as root
+
+################
+# System calls #
+################
+
 SystemCallFilter=@system-service
 SystemCallFilter=~@resources @privileged
 SystemCallArchitectures=native
