--- a/opendkim.service.d/hardening.conf
+++ b/opendkim.service.d/hardening.conf
@@ -1,20 +1,57 @@
 [Service]
+##############
+# Networking #
+##############
+
 PrivateNetwork=yes
-NoNewPrivileges=yes
-CapabilityBoundingSet=
 RestrictAddressFamilies=AF_UNIX
 IPAddressDeny=any
-UMask=007
+
+
+###############
+# File system #
+###############
+#  Note that the effect of these settings may be undone by privileged processes. In order to
+#  set up an effective sandboxed environment for a unit it is thus recommended to combine
+#  these settings with either CapabilityBoundingSet=~CAP_SYS_ADMIN or
+#  SystemCallFilter=~@mount.
+
+ProtectHome=yes
 ProtectSystem=strict
 ReadWritePaths=-/run/opendkim
-ProtectHome=yes
 PrivateTmp=yes
+
+###################
+# User separation #
+###################
+
+# PrivateUsers= service needs to view other users files
+# DynamicUser= service runs as defined user
+
+###########
+# Devices #
+###########
+
 PrivateDevices=yes
-ProtectHostname=yes
-ProtectClock=yes
+# DeviceAllow= service has PrivateDevices=yes
+
+##########
+# Kernel #
+##########
+
 ProtectKernelTunables=yes
 ProtectKernelModules=yes
 ProtectKernelLogs=yes
+
+########
+# Misc #
+########
+
+CapabilityBoundingSet=
+AmbientCapabilities=
+NoNewPrivileges=yes
+ProtectHostname=yes
+ProtectClock=yes
 ProtectControlGroups=yes
 RestrictNamespaces=yes
 LockPersonality=yes
@@ -22,6 +59,11 @@ MemoryDenyWriteExecute=yes
 RestrictRealtime=yes
 RestrictSUIDSGID=yes
 RemoveIPC=yes
+
+################
+# System calls #
+################
+
 SystemCallFilter=@system-service
 SystemCallFilter=~@resources @privileged
 SystemCallArchitectures=native
