--- a/opendmarc.service.d/hardening.conf
+++ b/opendmarc.service.d/hardening.conf
@@ -1,20 +1,58 @@
 [Service]
-IPAccounting=yes
-NoNewPrivileges=yes
-CapabilityBoundingSet=
+##############
+# Networking #
+##############
+
+# PrivateNetwork= service needs access to system network
 RestrictAddressFamilies=AF_UNIX AF_INET AF_INET6
-UMask=007
+IPAccounting=yes
+# IPAddressAllow= service needs access to all IP addresses
+# IPAddressDeny= service needs access to all IP addresses
+
+###############
+# File system #
+###############
+#  Note that the effect of these settings may be undone by privileged processes. In order to
+#  set up an effective sandboxed environment for a unit it is thus recommended to combine
+#  these settings with either CapabilityBoundingSet=~CAP_SYS_ADMIN or
+#  SystemCallFilter=~@mount.
+
+ProtectHome=yes
 ProtectSystem=strict
 ReadWritePaths=-/run/opendmarc
-ProtectHome=yes
 PrivateTmp=yes
-PrivateDevices=yes
+
+###################
+# User separation #
+###################
+
 PrivateUsers=yes
-ProtectHostname=yes
-ProtectClock=yes
+# DynamicUser= service runs as defined user
+
+###########
+# Devices #
+###########
+
+PrivateDevices=yes
+# DeviceAllow= service has PrivateDevices=yes
+
+##########
+# Kernel #
+##########
+
 ProtectKernelTunables=yes
 ProtectKernelModules=yes
 ProtectKernelLogs=yes
+
+########
+# Misc #
+########
+
+CapabilityBoundingSet=
+AmbientCapabilities=
+NoNewPrivileges=yes
+ProtectHostname=yes
+ProtectClock=yes
 ProtectControlGroups=yes
 RestrictNamespaces=yes
 LockPersonality=yes
@@ -22,6 +60,11 @@ MemoryDenyWriteExecute=yes
 RestrictRealtime=yes
 RestrictSUIDSGID=yes
 RemoveIPC=yes
+
+################
+# System calls #
+################
+
 SystemCallFilter=@system-service
 SystemCallFilter=~@resources @privileged
 SystemCallArchitectures=native
