--- a/dovecot.service.d/hardening.conf
+++ b/dovecot.service.d/hardening.conf
@@ -1,23 +1,70 @@
 [Service]
+##############
+# Networking #
+##############
+
+# PrivateNetwork= service needs access to system network
+RestrictAddressFamilies=AF_UNIX AF_INET AF_INET6
 IPAccounting=yes
-CapabilityBoundingSet=CAP_DAC_READ_SEARCH CAP_DAC_OVERRIDE CAP_SYS_CHROOT CAP_AUDIT_WRITE CAP_KILL CAP_SETGID CAP_SETUID CAP_CHOWN CAP_NET_BIND_SERVICE CAP_SYS_RESOURCE
+# IPAddressAllow= service needs access to all IP addresses
+# IPAddressDeny= service needs access to all IP addresses
+
+###############
+# File system #
+###############
+#  Note that the effect of these settings may be undone by privileged processes. In order to
+#  set up an effective sandboxed environment for a unit it is thus recommended to combine
+#  these settings with either CapabilityBoundingSet=~CAP_SYS_ADMIN or
+#  SystemCallFilter=~@mount.
+
+# ProtectHome= service needs access to home dirs
 ProtectSystem=strict
 ReadWritePaths=-/run/dovecot -/var/lib/dovecot -/var/spool/postfix
 PrivateTmp=yes
+
+###################
+# User separation #
+###################
+
+# PrivateUsers= service runs as root
+# DynamicUser= service runs as root
+
+###########
+# Devices #
+###########
+
 PrivateDevices=yes
-ProtectHostname=yes
-ProtectClock=yes
+# DeviceAllow= service has PrivateDevices=yes
+
+##########
+# Kernel #
+##########
+
 ProtectKernelTunables=yes
 ProtectKernelModules=yes
 ProtectKernelLogs=yes
+
+########
+# Misc #
+########
+
+CapabilityBoundingSet=CAP_DAC_READ_SEARCH CAP_DAC_OVERRIDE CAP_SYS_CHROOT CAP_AUDIT_WRITE CAP_KILL CAP_SETGID CAP_SETUID CAP_CHOWN CAP_NET_BIND_SERVICE CAP_SYS_RESOURCE
+# AmbientCapabilities= service runs as root
+# NoNewPrivileges= service children need to elevate privileges sometimes
+ProtectHostname=yes
+ProtectClock=yes
 ProtectControlGroups=yes
-RestrictAddressFamilies=AF_UNIX AF_INET AF_INET6
 RestrictNamespaces=yes
 LockPersonality=yes
 MemoryDenyWriteExecute=yes
 RestrictRealtime=yes
 RestrictSUIDSGID=yes
-RemoveIPC=yes
+# RemoveIPC= service runs as root
+
+################
+# System calls #
+################
+
 SystemCallFilter=@mount @privileged @system-service
-SystemCallFilter=~@clock @debug @module @raw-io @reboot @swap @resources @cpu-emulation @obsolete
+SystemCallFilter=~@resources
 SystemCallArchitectures=native
