--- a/pkgstats.service.d/hardening.conf
+++ b/pkgstats.service.d/hardening.conf
@@ -1,18 +1,59 @@
 [Service]
-NoNewPrivileges=yes
-CapabilityBoundingSet=
-RestrictAddressFamilies=AF_INET AF_INET6 AF_UNIX
-UMask=077
-ProtectSystem=strict
+##############
+# Networking #
+##############
+
+# PrivateNetwork= service needs access to system network
+RestrictAddressFamilies=AF_UNIX AF_INET AF_INET6
+IPAccounting=yes
+# IPAddressAllow= service needs access to all IP addresses
+# IPAddressDeny= service needs access to all IP addresses
+
+###############
+# File system #
+###############
+#  Note that the effect of these settings may be undone by privileged processes. In order to
+#  set up an effective sandboxed environment for a unit it is thus recommended to combine
+#  these settings with either CapabilityBoundingSet=~CAP_SYS_ADMIN or
+#  SystemCallFilter=~@mount.
+
 ProtectHome=yes
+ProtectSystem=strict
+# ReadWritePaths= service does not need explicit paths
 PrivateTmp=yes
-PrivateDevices=yes
+
+###################
+# User separation #
+###################
+
 PrivateUsers=yes
-ProtectHostname=yes
-ProtectClock=yes
+# DynamicUser=true defined in packaged unit file
+
+###########
+# Devices #
+###########
+
+PrivateDevices=yes
+# DeviceAllow= service has PrivateDevices=yes
+
+##########
+# Kernel #
+##########
+
 ProtectKernelTunables=yes
 ProtectKernelModules=yes
 ProtectKernelLogs=yes
+
+########
+# Misc #
+########
+
+UMask=077
+CapabilityBoundingSet=
+AmbientCapabilities=
+NoNewPrivileges=yes
+ProtectHostname=yes
+ProtectClock=yes
 ProtectControlGroups=yes
 RestrictNamespaces=yes
 LockPersonality=yes
@@ -20,6 +61,11 @@ MemoryDenyWriteExecute=yes
 RestrictRealtime=yes
 RestrictSUIDSGID=yes
 RemoveIPC=yes
+
+################
+# System calls #
+################
+
 SystemCallFilter=@system-service
 SystemCallFilter=~@resources @privileged
 SystemCallArchitectures=native
