Add deviceallow list to bluetooth sandboxing

--- a/bluetooth.service.d/hardening.conf
+++ b/bluetooth.service.d/hardening.conf
@@ -32,7 +32,9 @@ PrivateTmp=yes
 ###########
 
 # PrivateDevices= service needs access to hardware devices
-# DeviceAllow=
+DevicePolicy=closed
+DeviceAllow=/dev/rfkill rw
+DeviceAllow=/dev/uinput rw
 
 ##########
 # Kernel #
