Update cupsd hardening

--- a/org.cups.cupsd.service.d/hardening.conf
+++ b/org.cups.cupsd.service.d/hardening.conf
@@ -6,8 +6,9 @@
 RestrictAddressFamilies=AF_INET AF_INET6 AF_NETLINK AF_UNIX
 IPAddressDeny=any
 IPAddressAllow=localhost
-IPAddressAllow=10.0.1.0/8
 IPAddressAllow=192.168.1.0/8
+IPAddressAllow=172.16.1.0/8
+IPAddressAllow=10.0.1.0/8
 
 ###############
 # File system #
@@ -51,7 +52,7 @@ ProtectKernelLogs=yes
 
 CapabilityBoundingSet=CAP_CHOWN CAP_AUDIT_WRITE CAP_DAC_OVERRIDE CAP_FSETID CAP_KILL CAP_NET_BIND_SERVICE CAP_SETGID CAP_SETUID
 # AmbientCapabilities= service runs as root
-#NoNewPrivileges=yes
+#NoNewPrivileges= service needs "no" on this to function
 ProtectHostname=yes
 ProtectClock=yes
 ProtectControlGroups=yes
@@ -66,6 +67,5 @@ RestrictSUIDSGID=yes
 # System calls #
 ################
 
-#SystemCallFilter=@system-service @resources
-SystemCallFilter=~@mount
+SystemCallFilter=@system-service
 SystemCallArchitectures=native
