--- a/nginx.service.d/user.conf
+++ b/nginx.service.d/user.conf
@@ -4,6 +4,8 @@ Group=http
 UMask=077
 RuntimeDirectory=nginx
 RuntimeDirectoryMode=0770
+StateDirectory=nginx
+RuntimeDirectoryMode=0770
 NoNewPrivileges=yes
 CapabilityBoundingSet=
 CapabilityBoundingSet=CAP_NET_BIND_SERVICE
