--- a/nginx.service.d/hardening.conf
+++ b/nginx.service.d/hardening.conf
@@ -19,8 +19,12 @@ IPAccounting=yes
 
 ProtectHome=yes
 ProtectSystem=strict
-ReadWritePaths=-/run/nginx -/var/log/nginx
+#Additional paths you should allow on your system configuration. Path /run can be allowed only if Apparmor is present and configured to allow only /var/nginx.pid read-write.
+#ReadWritePaths=-/run -/var/ngx_pagespeed_cache
+ReadWritePaths=-/run/nginx -/var/log/nginx -/usr/share/nginx/ -/var/lib/nginx
 PrivateTmp=yes
+LogsDirectory=nginx
+RuntimeDirectory=nginx
 
 ###################
 # User separation #
@@ -28,12 +32,14 @@ PrivateTmp=yes
 
 # PrivateUsers= service needs to view other users files (certbot)
 # DynamicUser= service has a defined user
+NoNewPrivileges=true
 
 ###########
 # Devices #
 ###########
 
 PrivateDevices=yes
+DevicePolicy=closed
 # DeviceAllow= service has PrivateDevices=yes
 
 ##########
@@ -55,10 +61,11 @@ ProtectClock=yes
 ProtectControlGroups=yes
 RestrictNamespaces=yes
 LockPersonality=yes
-MemoryDenyWriteExecute=yes
+#MemoryDenyWriteExecute=yes -conflicts with pagespeed module, possible conflicts with other modules
 RestrictRealtime=yes
 RestrictSUIDSGID=yes
 RemoveIPC=yes
+KeyringMode=private
 
 ################
 # System calls #
