Fix bluetoothd sandboxing

--- a/bluetooth.service.d/hardening.conf
+++ b/bluetooth.service.d/hardening.conf
@@ -17,8 +17,10 @@ IPAddressDeny=any
 
 # ProtectHome=yes already specified in packaged unit file
 ProtectSystem=strict
-ReadWritePaths=/var/lib/bluetooth
+ReadWritePaths=/var/lib/bluetooth /run/systemd/unit-root
 PrivateTmp=yes
+ProtectProc=ptraceable
+ProcSubset=pid
 
 ###################
 # User separation #
