Fix NetworkManager systemd sandboxing

--- a/NetworkManager.service.d/hardening.conf
+++ b/NetworkManager.service.d/hardening.conf
@@ -49,7 +49,6 @@ ProtectKernelLogs=yes
 # Misc #
 ########
 
-UMask=077
 CapabilityBoundingSet=~CAP_SYS_ADMIN CAP_SETUID CAP_SETGID CAP_SYS_CHROOT
 # AmbientCapabilities= service runs as root
 NoNewPrivileges=yes
@@ -68,5 +67,5 @@ RestrictSUIDSGID=yes
 ################
 
 SystemCallFilter=@system-service
-SystemCallFilter=~@resources @privileged
+SystemCallFilter=~@privileged
 SystemCallArchitectures=native
