See previous commit

--- a/NetworkManager.service.d/hardening.conf
+++ b/NetworkManager.service.d/hardening.conf
@@ -67,5 +67,5 @@ RestrictSUIDSGID=yes
 ################
 
 SystemCallFilter=@system-service
-SystemCallFilter=~@privileged
+# SystemCallFilter= service needs all calls in @system-service
 SystemCallArchitectures=native
