--- a/NetworkManager.service.d/hardening.conf
+++ b/NetworkManager.service.d/hardening.conf
@@ -19,7 +19,7 @@ RestrictAddressFamilies=AF_INET AF_INET6 AF_NETLINK AF_PACKET AF_UNIX
 
 ProtectHome=yes
 ProtectSystem=strict
-ProtectProc=ptraceable
+ProtectProc=invisible
 ReadWritePaths=/etc -/proc/sys/net -/var/lib/NetworkManager/
 PrivateTmp=yes
 
