Fix issue with bluetooth sandboxing

--- a/bluetooth.service.d/hardening.conf
+++ b/bluetooth.service.d/hardening.conf
@@ -17,7 +17,7 @@ IPAddressDeny=any
 
 # ProtectHome=yes already specified in packaged unit file
 ProtectSystem=strict
-ReadWritePaths=/var/lib/bluetooth /run/systemd/unit-root
+ReadWritePaths=-/var/lib/bluetooth -/run/systemd/unit-root
 PrivateTmp=yes
 ProtectProc=ptraceable
 ProcSubset=pid
