Update networkmanager hardening

--- a/NetworkManager.service.d/hardening.conf
+++ b/NetworkManager.service.d/hardening.conf
@@ -66,6 +66,6 @@ RestrictSUIDSGID=yes
 # System calls #
 ################
 
-SystemCallFilter=@system-service
+SystemCallFilter=@system-service @privileged
 # SystemCallFilter= service needs all calls in @system-service
 SystemCallArchitectures=native
