Update nginx hardening for reverse proxy pacman cache

--- a/nginx.service.d/hardening.conf
+++ b/nginx.service.d/hardening.conf
@@ -19,7 +19,7 @@ IPAccounting=yes
 
 ProtectHome=yes
 ProtectSystem=strict
-ReadWritePaths=-/run/nginx -/var/log/nginx
+ReadWritePaths=-/run/nginx -/var/log/nginx -/srv/http/pacman-cache
 PrivateTmp=yes
 
 ###################
